<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="300dp"
	android:layout_height="wrap_content">

	<RelativeLayout
		android:id="@+id/alert_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="left">

		<ImageView
			android:id="@+id/alert_icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@android:drawable/ic_dialog_alert"
			android:layout_margin="7dp"/>

		<TextView
			android:id="@+id/title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:layout_toRightOf="@+id/alert_icon"
			android:layout_marginLeft="@dimen/dimen_5dp_w"
			android:text="@string/app_name"
			android:textSize="22sp"></TextView>
	</RelativeLayout>

	<TextView
		android:id="@+id/alert_view"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/dimen_10dp_w"
		android:text="@string/lact_alarm_str"
		android:textSize="20sp"
		android:layout_marginTop="@dimen/dimen_5dp_h">
		</TextView>

	<Button
		android:id="@+id/alert_ok"
		android:layout_width="@dimen/dimen_100dp_w"
		android:layout_height="@dimen/dimen_50dp_h"
		android:layout_margin="1dp"
		android:layout_gravity="center_horizontal"
		android:text="@string/ok"/>
</LinearLayout>